--- a/rescat/rescat/Main/Storyboard/BannerTableCell.xib
+++ b/rescat/rescat/Main/Storyboard/BannerTableCell.xib
@@ -13,24 +13,29 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BannerTableCell" customModule="rescat" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="BannerTableCell" customModule="rescat" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="165"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1hg-LH-8EV">
-                    <rect key="frame" x="0.0" y="20" width="375" height="120"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dsc0204" translatesAutoresizingMaskIntoConstraints="NO" id="1hg-LH-8EV">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="165"/>
                     <color key="backgroundColor" red="0.55119977679999999" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="120" id="7fq-a3-iGa"/>
-                    </constraints>
                 </imageView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="1hg-LH-8EV" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="204-2c-Vpv"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="1hg-LH-8EV" secondAttribute="bottom" id="97B-rk-apI"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="1hg-LH-8EV" secondAttribute="trailing" id="aKd-pT-LPM"/>
                 <constraint firstItem="1hg-LH-8EV" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="dao-3J-xN4"/>
             </constraints>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+            <connections>
+                <outlet property="bannerImageView" destination="1hg-LH-8EV" id="vYC-iN-KH9"/>
+            </connections>
         </view>
     </objects>
+    <resources>
+        <image name="dsc0204" width="340" height="163"/>
+    </resources>
 </document>
