--- a/rescat/rescat/Sign/Storyboard/Care.storyboard
+++ b/rescat/rescat/Sign/Storyboard/Care.storyboard
@@ -134,12 +134,21 @@
                                     <action selector="nextAction:" destination="ehf-iy-fuJ" eventType="touchUpInside" id="SHW-A8-rKI"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="89k-O1-RgF">
+                                <rect key="frame" x="38" y="394.5" width="299" height="36"/>
+                                <string key="text">인증을 위해서는 GPS가 활성화되어 있어야 합니다. 
+본격적인 인증을 시작하기에 앞서 GPS를 켜주세요.</string>
+                                <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="15"/>
+                                <color key="textColor" red="0.27451187370000002" green="0.2745060325" blue="0.27450999619999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.98824185132980347" green="0.98822349309921265" blue="0.98823589086532593" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="jN7-lR-DJo" firstAttribute="leading" secondItem="tIn-A2-nit" secondAttribute="leading" constant="38" id="2SR-qh-aBJ"/>
                             <constraint firstItem="4a3-9C-adc" firstAttribute="top" secondItem="50y-wE-XRe" secondAttribute="bottom" constant="34" id="3BG-Uf-1pl"/>
                             <constraint firstItem="jN7-lR-DJo" firstAttribute="centerX" secondItem="eW2-dn-r29" secondAttribute="centerX" id="5tY-2W-IkT"/>
+                            <constraint firstItem="89k-O1-RgF" firstAttribute="centerX" secondItem="tIn-A2-nit" secondAttribute="centerX" id="ARf-Of-jVT"/>
                             <constraint firstItem="lLm-0z-m9j" firstAttribute="centerY" secondItem="4a3-9C-adc" secondAttribute="centerY" id="Ak5-Cj-VDb"/>
                             <constraint firstItem="tIn-A2-nit" firstAttribute="trailing" secondItem="jN7-lR-DJo" secondAttribute="trailing" constant="38" id="GX6-rd-7EQ"/>
                             <constraint firstItem="4a3-9C-adc" firstAttribute="centerX" secondItem="50y-wE-XRe" secondAttribute="centerX" id="Gn8-lG-Gfr"/>
@@ -147,6 +156,7 @@
                             <constraint firstItem="eW2-dn-r29" firstAttribute="centerX" secondItem="tIn-A2-nit" secondAttribute="centerX" id="KMO-YS-rcD"/>
                             <constraint firstItem="jN7-lR-DJo" firstAttribute="top" secondItem="eW2-dn-r29" secondAttribute="bottom" constant="46" id="KYp-Gx-E5A"/>
                             <constraint firstItem="fGr-N7-Fh7" firstAttribute="leading" secondItem="tIn-A2-nit" secondAttribute="leading" constant="27" id="Uck-lR-wHB"/>
+                            <constraint firstItem="89k-O1-RgF" firstAttribute="top" secondItem="lLm-0z-m9j" secondAttribute="bottom" constant="30" id="aPd-FF-yfG"/>
                             <constraint firstItem="aor-v3-Z8y" firstAttribute="centerX" secondItem="KtW-DP-Gmf" secondAttribute="centerX" id="g34-lO-odc"/>
                             <constraint firstItem="tIn-A2-nit" firstAttribute="bottom" secondItem="fGr-N7-Fh7" secondAttribute="bottom" constant="98" id="ghg-9h-tSS"/>
                             <constraint firstItem="aor-v3-Z8y" firstAttribute="centerY" secondItem="lLm-0z-m9j" secondAttribute="centerY" id="lGy-t0-10W"/>
@@ -318,11 +328,10 @@
                                     <action selector="nextAction:" destination="aPC-fB-RVY" eventType="touchUpInside" id="iDa-5u-nFu"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ssa-6s-8y3">
-                                <rect key="frame" x="107.5" y="206" width="160" height="37"/>
+                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ssa-6s-8y3">
+                                <rect key="frame" x="128" y="206" width="119" height="37"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="37" id="I93-Bx-9LD"/>
-                                    <constraint firstAttribute="width" secondItem="Ssa-6s-8y3" secondAttribute="height" multiplier="160:37" id="Oic-n5-Tts"/>
                                 </constraints>
                                 <state key="normal" title="이미지 넣으삼(버튼)"/>
                                 <connections>
