--- a/rescat/rescat/Main/Storyboard/FundingTableCell.xib
+++ b/rescat/rescat/Main/Storyboard/FundingTableCell.xib
@@ -12,7 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TempTableCell" customModule="rescat" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="TempTableCell" customModule="rescat" customModuleProvider="target">
+        <view contentMode="scaleToFill" restorationIdentifier="FundingTableCell" id="iN0-l3-epB" customClass="FundingTableCell" customModule="rescat" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="165"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -22,27 +22,16 @@
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="imageExCat" translatesAutoresizingMaskIntoConstraints="NO" id="EDI-Yr-tqc">
                             <rect key="frame" x="0.0" y="0.0" width="375" height="165"/>
                         </imageView>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="프로젝트 모금" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="17D-or-OmN">
-                            <rect key="frame" x="17" y="18" width="83" height="21"/>
-                            <color key="backgroundColor" red="1" green="0.48102678570000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="83" id="48g-NM-kFd"/>
-                                <constraint firstAttribute="height" constant="21" id="RUb-rC-qP3"/>
-                            </constraints>
-                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kfi-e2-FhS">
                             <rect key="frame" x="17" y="56" width="42" height="21"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <nil key="textColor"/>
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pzv-0W-2F3">
                             <rect key="frame" x="17" y="79" width="42" height="21"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <nil key="textColor"/>
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RZO-8N-xhs">
@@ -53,29 +42,44 @@
                             </constraints>
                         </view>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5IA-os-ox0">
-                            <rect key="frame" x="23" y="121" width="33" height="16"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                            <nil key="textColor"/>
+                            <rect key="frame" x="23" y="122.5" width="31" height="14.5"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                            <color key="textColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cardLableSupport" translatesAutoresizingMaskIntoConstraints="NO" id="ERg-Mj-Xc5">
+                            <rect key="frame" x="17" y="18" width="83" height="21"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="83" id="FUo-JR-mUM"/>
+                                <constraint firstAttribute="height" constant="21" id="a3t-hp-8RT"/>
+                            </constraints>
+                        </imageView>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hS3-PP-4D8">
+                            <rect key="frame" x="319.5" y="122.5" width="31" height="15"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                            <color key="textColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
                     <color key="backgroundColor" red="0.55119977679999999" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
-                        <constraint firstItem="Pzv-0W-2F3" firstAttribute="leading" secondItem="17D-or-OmN" secondAttribute="leading" id="D5m-K7-L3t"/>
                         <constraint firstAttribute="trailing" secondItem="RZO-8N-xhs" secondAttribute="trailing" constant="22" id="DJ0-aB-ljF"/>
-                        <constraint firstItem="17D-or-OmN" firstAttribute="leading" secondItem="OeD-6x-6WY" secondAttribute="leading" constant="17" id="Jo3-KS-ZPb"/>
+                        <constraint firstItem="ERg-Mj-Xc5" firstAttribute="leading" secondItem="OeD-6x-6WY" secondAttribute="leading" constant="17" id="Gdo-YV-Lr5"/>
+                        <constraint firstAttribute="trailing" secondItem="hS3-PP-4D8" secondAttribute="trailing" constant="24.5" id="J74-Qn-zq0"/>
                         <constraint firstItem="RZO-8N-xhs" firstAttribute="leading" secondItem="OeD-6x-6WY" secondAttribute="leading" constant="22" id="LH2-In-wV2"/>
-                        <constraint firstItem="kfi-e2-FhS" firstAttribute="leading" secondItem="17D-or-OmN" secondAttribute="leading" id="LuX-cV-k9p"/>
                         <constraint firstAttribute="bottom" secondItem="EDI-Yr-tqc" secondAttribute="bottom" id="R8k-Tr-HlW"/>
                         <constraint firstItem="EDI-Yr-tqc" firstAttribute="top" secondItem="OeD-6x-6WY" secondAttribute="top" id="Sb8-XE-Bqz"/>
+                        <constraint firstItem="hS3-PP-4D8" firstAttribute="centerY" secondItem="5IA-os-ox0" secondAttribute="centerY" id="WQ1-Sb-Kzz"/>
                         <constraint firstAttribute="height" constant="165" id="aJW-pN-MCS"/>
                         <constraint firstItem="5IA-os-ox0" firstAttribute="leading" secondItem="OeD-6x-6WY" secondAttribute="leading" constant="23" id="dSu-Ps-Qu2"/>
                         <constraint firstItem="kfi-e2-FhS" firstAttribute="top" secondItem="OeD-6x-6WY" secondAttribute="top" constant="56" id="euP-sd-9Zt"/>
+                        <constraint firstItem="kfi-e2-FhS" firstAttribute="leading" secondItem="ERg-Mj-Xc5" secondAttribute="leading" id="ftH-Pn-L9o"/>
                         <constraint firstItem="EDI-Yr-tqc" firstAttribute="leading" secondItem="OeD-6x-6WY" secondAttribute="leading" id="lIO-AE-PWR"/>
                         <constraint firstAttribute="trailing" secondItem="EDI-Yr-tqc" secondAttribute="trailing" id="lKh-Uh-v8g"/>
                         <constraint firstAttribute="bottom" secondItem="5IA-os-ox0" secondAttribute="bottom" constant="28" id="m3W-Eh-Pmz"/>
+                        <constraint firstItem="ERg-Mj-Xc5" firstAttribute="top" secondItem="OeD-6x-6WY" secondAttribute="top" constant="18" id="oo5-x7-KWM"/>
                         <constraint firstItem="RZO-8N-xhs" firstAttribute="top" secondItem="Pzv-0W-2F3" secondAttribute="bottom" constant="15" id="pS6-fX-5q0"/>
-                        <constraint firstItem="17D-or-OmN" firstAttribute="top" secondItem="OeD-6x-6WY" secondAttribute="top" constant="18" id="u3L-Yy-CuU"/>
+                        <constraint firstItem="Pzv-0W-2F3" firstAttribute="leading" secondItem="kfi-e2-FhS" secondAttribute="leading" id="s4U-7y-BT9"/>
                         <constraint firstItem="Pzv-0W-2F3" firstAttribute="top" secondItem="OeD-6x-6WY" secondAttribute="top" constant="79" id="wuz-LJ-9rH"/>
                     </constraints>
                 </view>
@@ -98,6 +102,7 @@
         </view>
     </objects>
     <resources>
+        <image name="cardLableSupport" width="83" height="21"/>
         <image name="imageExCat" width="342" height="165"/>
     </resources>
 </document>
