--- a/rescat/rescat/Sign/Storyboard/Sign.storyboard
+++ b/rescat/rescat/Sign/Storyboard/Sign.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="61E-kc-niy">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="AZg-5k-cSp">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -407,6 +407,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="eoh-qN-AKp"/>
                     </view>
+                    <navigationItem key="navigationItem" id="hJ3-8m-Mpu">
+                        <barButtonItem key="backBarButtonItem" title=" " id="al4-Gv-Xwf"/>
+                    </navigationItem>
                     <connections>
                         <outlet property="careButton" destination="eO5-BK-1M0" id="0Fo-YF-A5a"/>
                         <outlet property="skipButton" destination="RXE-RK-gyb" id="9s0-oB-DDd"/>
@@ -415,7 +418,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="e8F-P9-5G5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3004" y="22.938530734632685"/>
+            <point key="canvasLocation" x="3796" y="23"/>
         </scene>
         <!--Care-->
         <scene sceneID="fTf-DN-2M8">
@@ -423,7 +426,7 @@
                 <viewControllerPlaceholder storyboardName="Care" id="qy8-m8-xba" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vv7-lN-a1g" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3628" y="25"/>
+            <point key="canvasLocation" x="4567.1999999999998" y="24.287856071964018"/>
         </scene>
         <!--로그인-->
         <scene sceneID="xoG-CC-NYb">
@@ -532,6 +535,26 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pCP-cw-aou" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="188" y="25.637181409295355"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="VD4-7t-GEs">
+            <objects>
+                <navigationController storyboardIdentifier="WelcomVCNavi" automaticallyAdjustsScrollViewInsets="NO" id="AZg-5k-cSp" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="hwk-bD-cZd">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" red="0.41036024689674377" green="0.30715477466583252" blue="0.22743353247642517" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <color key="barTintColor" red="1" green="0.99998801946640015" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="vU7-ob-wuG" kind="relationship" relationship="rootViewController" id="15F-js-0l4"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LMP-eA-b2c" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3004" y="22.938530734632685"/>
         </scene>
     </scenes>
 </document>
