--- a/rescat/rescat/Sign/Storyboard/Care.storyboard
+++ b/rescat/rescat/Sign/Storyboard/Care.storyboard
@@ -347,12 +347,45 @@
                                     <constraint firstAttribute="width" secondItem="hM9-YE-Kqu" secondAttribute="height" multiplier="1:1" id="Jfb-bk-xjb"/>
                                 </constraints>
                             </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nQG-ht-A7Z">
+                                <rect key="frame" x="136.5" y="206" width="102" height="37"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UfU-Y9-M1i">
+                                        <rect key="frame" x="17" y="9" width="34" height="19"/>
+                                        <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="15"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AUT-Su-hoa">
+                                        <rect key="frame" x="61" y="6.5" width="24" height="24"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="24" id="b2U-HR-XPr"/>
+                                            <constraint firstAttribute="width" secondItem="AUT-Su-hoa" secondAttribute="height" multiplier="1:1" id="bMM-GZ-vLN"/>
+                                        </constraints>
+                                        <state key="normal" title="X"/>
+                                        <connections>
+                                            <action selector="deleteButton:" destination="aPC-fB-RVY" eventType="touchUpInside" id="4WF-H5-jlf"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.41036024689674377" green="0.30715477466583252" blue="0.22743353247642517" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstItem="AUT-Su-hoa" firstAttribute="centerY" secondItem="UfU-Y9-M1i" secondAttribute="centerY" id="1zp-ac-6b0"/>
+                                    <constraint firstAttribute="height" constant="37" id="7PK-nG-QeQ"/>
+                                    <constraint firstItem="AUT-Su-hoa" firstAttribute="leading" secondItem="UfU-Y9-M1i" secondAttribute="trailing" priority="250" constant="10" id="JWO-uU-MM2"/>
+                                    <constraint firstItem="UfU-Y9-M1i" firstAttribute="leading" secondItem="nQG-ht-A7Z" secondAttribute="leading" constant="17" id="bRe-i3-yUh"/>
+                                    <constraint firstAttribute="bottom" secondItem="UfU-Y9-M1i" secondAttribute="bottom" constant="9" id="bUV-gq-Oo2"/>
+                                    <constraint firstAttribute="trailing" secondItem="AUT-Su-hoa" secondAttribute="trailing" constant="17" id="bfU-dc-REj"/>
+                                    <constraint firstItem="UfU-Y9-M1i" firstAttribute="top" secondItem="nQG-ht-A7Z" secondAttribute="top" constant="9" id="jJx-89-EJn"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="E3P-Zy-Seo" firstAttribute="top" secondItem="08Z-EE-7pW" secondAttribute="top" constant="70" id="3W6-ux-5dx"/>
                             <constraint firstItem="E3P-Zy-Seo" firstAttribute="centerX" secondItem="08Z-EE-7pW" secondAttribute="centerX" id="4jr-Rj-Ny1"/>
                             <constraint firstItem="hM9-YE-Kqu" firstAttribute="centerX" secondItem="08Z-EE-7pW" secondAttribute="centerX" id="C85-Gy-LZL"/>
+                            <constraint firstItem="nQG-ht-A7Z" firstAttribute="centerX" secondItem="UhZ-bE-Qb5" secondAttribute="centerX" id="Cg2-yk-Rc7"/>
                             <constraint firstItem="08Z-EE-7pW" firstAttribute="trailing" secondItem="b5c-ri-hpP" secondAttribute="trailing" constant="27" id="IEl-va-V51"/>
                             <constraint firstItem="Ssa-6s-8y3" firstAttribute="top" secondItem="UhZ-bE-Qb5" secondAttribute="bottom" constant="47" id="KRC-Y4-7SQ"/>
                             <constraint firstItem="hM9-YE-Kqu" firstAttribute="top" secondItem="Ssa-6s-8y3" secondAttribute="bottom" constant="36" id="SFe-oQ-ogD"/>
@@ -361,15 +394,20 @@
                             <constraint firstItem="UhZ-bE-Qb5" firstAttribute="top" secondItem="E3P-Zy-Seo" secondAttribute="bottom" constant="9" id="bbd-7A-grU"/>
                             <constraint firstItem="08Z-EE-7pW" firstAttribute="bottom" secondItem="b5c-ri-hpP" secondAttribute="bottom" constant="98" id="dMU-mV-8kS"/>
                             <constraint firstItem="Ssa-6s-8y3" firstAttribute="centerX" secondItem="UhZ-bE-Qb5" secondAttribute="centerX" id="o7B-gN-pQ4"/>
+                            <constraint firstItem="nQG-ht-A7Z" firstAttribute="top" secondItem="UhZ-bE-Qb5" secondAttribute="bottom" constant="47" id="yi2-Gm-0Ip"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="08Z-EE-7pW"/>
                     </view>
                     <connections>
+                        <outlet property="addAreaButton" destination="Ssa-6s-8y3" id="yf5-ZY-Yfy"/>
+                        <outlet property="areaLabel" destination="UfU-Y9-M1i" id="5cR-QE-6SO"/>
+                        <outlet property="areaView" destination="nQG-ht-A7Z" id="Y99-w2-2mE"/>
                         <outlet property="imageView" destination="hM9-YE-Kqu" id="ODB-mK-DUr"/>
                         <outlet property="nextButton" destination="b5c-ri-hpP" id="DS1-A0-IyS"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Lgl-2E-3aq" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="Oaj-CN-RPN" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1617" y="793"/>
         </scene>
@@ -467,7 +505,8 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <connections>
-                                    <action selector="nextAction:" destination="aPC-fB-RVY" eventType="touchUpInside" id="Tbc-BY-Zha"/>
+                                    <action selector="AddAreaAction:" destination="9xl-mf-Zxi" eventType="touchUpInside" id="SeZ-dK-5NX"/>
+                                    <segue destination="Oaj-CN-RPN" kind="unwind" identifier="unwindToCare2" unwindAction="unwindToCare2WithSender:" id="mtN-lS-vY4"/>
                                 </connections>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="ajD-kW-TGV">
